# wolt-r-white

./: README.md  pyproject.toml
src/quest_wolt/: main.py
src/quest_wolt/data/: placeholder.py  user.py  utils.py
src/quest_wolt/models/: models.py
src/quest_wolt/models/ai_models/: ingredient_tfidf.joblib
src/quest_wolt/prediction_and_scoring/: placeholder.py  recommender.py
