[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foodquest-backend"
version = "0.1.0"
description = "Demo FastAPI backend for ingredient-based food quests and recommendations."
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
      "fastapi>=0.111.0",
      "uvicorn[standard]>=0.30.0",
      "pydantic>=2.7.0",
        "scikit-learn",
        "pandas"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]
